# anchor_traits

./: Cargo.toml
proc/: Cargo.toml
traits/: Cargo.toml
traits/src/: error.rs  lib.rs  util.rs
traits/src/accounts/: borsh_account.rs  bytemuck_account.rs  mod.rs  mutable.rs  program.rs  rest.rs  seeded.rs  signer.rs
traits/src/constraints/: address.rs  executable.rs  mod.rs  mutable.rs  owner.rs  signer.rs
traits/src/impls/: account_info.rs  array.rs  boxed.rs  mod.rs
traits/src/programs/: system.rs
traits/src/traits/: account.rs  account_data.rs  builder.rs  constraint.rs  maybe_bool.rs  mod.rs  program.rs  seeds.rs
