[workspace]
resolver = "3"
members = [
    "proc",
    "traits",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.84.1"
edition = "2021"

[workspace.dependencies]
proc = { path = "./proc" }

anyhow = "1.0.100"
array-init = "2.1.0"
base64 = "0.22.1"
bincode = "2.0.1"
borsh = "1.5.7"
bytemuck = "1.24.0"
derive-where = "1.6.0"
derive_more = { version = "2.0.1", features = ["full"] }
heck = "0.5.0"
pinocchio = "0.9.2"
pinocchio-system = "0.3.0"
proc-macro2 = "1.0.103"
quote = "1.0.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
syn = "2.0.110"
thiserror = "2.0.17"
